--- a/lab/repubblica/en_index.html
+++ b/lab/repubblica/en_index.html
@@ -56,11 +56,11 @@ serene by virtue of being self-resolving
 
 <span style="font-size: 18px;">
 
-<a class="none" href="fr_index.html">FR</a>
+<a class="none" href="es_index.html">ES</a>
 <span class="spacer"></span>
 <a class="none" href="index.html">IT</a>
 <span class="spacer"></span>
-<a class="none" href="sp_index.html">SP</a>
+<a class="none" href="fr_index.html">FR</a>
 
 </span>
 
