--- a/lab/repubblica/es_index.html
+++ b/lab/repubblica/es_index.html
@@ -58,9 +58,9 @@ serena perché auto-risolvente
 
 <a class="none" href="en_index.html">EN</a>
 <span class="spacer"></span>
-<a class="none" href="fr_index.html">FR</a>
+<a class="none" href="index.html">IT</a>
 <span class="spacer"></span>
-<a class="none" href="sp_index.html">SP</a>
+<a class="none" href="fr_index.html">FR</a>
 
 </span>
 
