--- a/lab/repubblica/fr_2.html
+++ b/lab/repubblica/fr_2.html
@@ -19,18 +19,16 @@ a:hover{text-decoration:underline}
 
 <div class="box">
 
-  <p>In summary: one lives in a Democracy if the People enjoy a Republic. If there exists a Public Jobs Bank (in which anyone can register and enlist to contribute) that enables the periodic, regular renewal of the personnel managing the public affair. If this Institute is not in force, then both "democracy" and "republic," though declared, though brandished, though vaunted, are fictitious. These are forms kept confused, intermediate, spurious, by those who, enjoying undue privileges, do not wish to renounce them and employ every agency and means at their disposal—primarily educational and informational ones—to keep the People unaware and in a state of subjugation.</p>
+  <p>La Démocratie est une société opposée à la Tyrannie : qu'elle soit empire, monarchie ou autre. Dans la tyrannie, le Peuple est soumis aux quelques-uns qui détiennent perpétuellement le pouvoir central. Dans la Démocratie, les citoyens peuvent accéder au noyau de la cellule sociétale (la République) grâce à un Institut (comme la Banque des Emplois Publics) qui la redistribue périodiquement. Toujours en maintenant une pleine compétence, aptitude et préparation. Chacun peut mener une vie publique active et devenir l'architecte de son propre destin. La société y gagne en jouissant d'une vision large, enrichie par chacun, capable de lui faire saisir les opportunités et de surmonter les obstacles.</p>
   
-  <p>And now, let us delve deeper and proceed ...</p>
-
   <br>
 
   <div class="nav">
-    <a href="en_2.html">&lt; 2</a>
+    <a href="fr_1.html">&lt; 1</a>
     <span class="spacer"></span>
-    3
+    2
     <span class="spacer"></span>
-    <a href="en_4.html">4 &gt;</a>
+    <a href="fr_3.html">3 &gt;</a>
   </div>
   
   <br><br>
@@ -40,7 +38,7 @@ a:hover{text-decoration:underline}
     Copyright © Danilo D'Antonio</a>, Laboratorio Eudemonia
    </div>
    </i>
-
+   
 </div>
 
 </body>
