--- a/lab/repubblica/fr_3.html
+++ b/lab/repubblica/fr_3.html
@@ -19,18 +19,18 @@ a:hover{text-decoration:underline}
 
 <div class="box">
 
-  <p>In summary: one lives in a Democracy if the People enjoy a Republic. If there exists a Public Jobs Bank (in which anyone can register and enlist to contribute) that enables the periodic, regular renewal of the personnel managing the public affair. If this Institute is not in force, then both "democracy" and "republic," though declared, though brandished, though vaunted, are fictitious. These are forms kept confused, intermediate, spurious, by those who, enjoying undue privileges, do not wish to renounce them and employ every agency and means at their disposal—primarily educational and informational ones—to keep the People unaware and in a state of subjugation.</p>
+  <p>En résumé : on vit en Démocratie si le Peuple jouit d'une République. S'il existe une Banque des Emplois Publics (où chacun peut s'inscrire et s'inscrire sur liste pour apporter sa contribution) qui permet le renouvellement périodique et régulier du personnel gérant la chose publique. Si cet Institut n'est pas en vigueur, tant la « démocratie » que la « république », bien que déclarées, bien que brandies, sont fictives. Il s'agit de formes maintenues confuses, intermédiaires, faux, par ceux qui, jouissant de privilèges indus, ne veulent pas y renoncer et utilisent tous les organismes en leur possession, notamment éducatifs et informationnels, pour maintenir le Peuple inconscient et en état de sujétion.</p>
   
-  <p>And now, let us delve deeper and proceed ...</p>
+  <p>Et maintenant, approfondissons, poursuivons ...</p>
 
   <br>
 
   <div class="nav">
-    <a href="en_2.html">&lt; 2</a>
+    <a href="fr_2.html">&lt; 2</a>
     <span class="spacer"></span>
     3
     <span class="spacer"></span>
-    <a href="en_4.html">4 &gt;</a>
+    <a href="fr_4.html">4 &gt;</a>
   </div>
   
   <br><br>
