--- a/lab/repubblica/fr_4.html
+++ b/lab/repubblica/fr_4.html
@@ -10,8 +10,8 @@
 <title>Opere d'Arte di Danilo D'Antonio</title>
 <style>
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
-.box{width:100%;max-width:70rem;text-align:left;padding-bottom:7rem;}
-.tit{width:100%;max-width:70rem;text-align:center;}
+.box{width:100%;max-width:80rem;text-align:left;padding-bottom:7rem;}
+.tit{width:100%;max-width:80rem;text-align:center;}
 h1{font-size:2em;margin:1rem 0 2rem 0;padding-top:4rem;}
 h2{font-size:1.4em;margin:1rem 0 3rem 0;padding-bottom:2rem;}
 p{font-size:1.2em;line-height:1.5;margin:0 0 3rem 0;}
@@ -29,7 +29,7 @@ a:hover{text-decoration:underline}
 
 <div class="tit">
 
-<a class="none" href="republique.html"><h1>___ La RÉPUBLIQUE du SENS ACCOMPLI ___</h1></a>
+<a class="none" href="fr_index.html"><h1>___ La RÉPUBLIQUE du SENS ACCOMPLI ___</h1></a>
 <h2>la seule qui ne soit pas une escroquerie</h2>
 
 </div>
