--- a/lab/repubblica/index.html
+++ b/lab/repubblica/index.html
@@ -60,7 +60,7 @@ serena perché auto-risolvente
 <span class="spacer"></span>
 <a class="none" href="fr_index.html">FR</a>
 <span class="spacer"></span>
-<a class="none" href="sp_index.html">SP</a>
+<a class="none" href="es_index.html">ES</a>
 
 </span>
 
