--- a/lab/repubblica/en_4.html
+++ b/lab/repubblica/en_4.html
@@ -11,7 +11,7 @@
 <style>
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
 .box{width:100%;max-width:80rem;text-align:left;padding-bottom:7rem;}
-.tit{width:100%;max-width:70rem;text-align:center;}
+.tit{width:100%;max-width:80rem;text-align:center;}
 h1{font-size:2em;margin:1rem 0 2rem 0;padding-top:4rem;}
 h2{font-size:1.4em;margin:1rem 0 3rem 0;padding-bottom:2rem;}
 p{font-size:1.2em;line-height:1.5;margin:0 0 3rem 0;}
@@ -29,7 +29,7 @@ a:hover{text-decoration:underline}
 
 <div class="tit">
 
-<a class="none" href="republic.html"><h1>___ The REPUBLIC of FULFILLED MEANING ___</h1></a>
+<a class="none" href="en_index.html"><h1>___ The REPUBLIC of FULFILLED MEANING ___</h1></a>
 <h2>the only one that is not a fraud</h2>
 
 </div>
