--- a/lab/repubblica/fr_index.html
+++ b/lab/repubblica/fr_index.html
@@ -37,16 +37,16 @@
 
 <div style="font-size: 42px; text-align: center; max-width: 1200px; padding: 20px;">
 
-<a class="none" href="1.html">
+<a class="none" href="fr_1.html">
 
 <strong>
 
-<span style="font-size: 69px;">R E P U B B L I C A</span>
+<span style="font-size: 69px;">R É P U B L I Q U E</span>
 
 <br><br>
 
-aperta, praticata, osmotica, vissuta<br>
-serena perché auto-risolvente
+ouverte, libre, osmotique, pratiquée, vécue<br>
+sereine car auto-résolvante
 
 </strong>
 
@@ -58,9 +58,9 @@ serena perché auto-risolvente
 
 <a class="none" href="en_index.html">EN</a>
 <span class="spacer"></span>
-<a class="none" href="fr_index.html">FR</a>
+<a class="none" href="index.html">IT</a>
 <span class="spacer"></span>
-<a class="none" href="sp_index.html">SP</a>
+<a class="none" href="es_index.html">ES</a>
 
 </span>
 
