--- a/lab/index.html
+++ b/lab/index.html
@@ -39,8 +39,8 @@
             'epoch.hyperlinker.org': 'https://hyperlinker.org/tec/dt/index.html',
             'sopruso-immobiliare.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.html',
             'repubblica-democrazia.hyperlinker.org': 'https://hyperlinker.org/repubblica/index.html',
-            'republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/republique.html',
-            'vive-la-republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/republique.html',
+            'republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/fr_index.html',
+            'vive-la-republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/fr_index.html',
             'republic.hyperlinker.org': 'https://hyperlinker.org/repubblica/en_index.html',
             'convento.hyperlinker.org': 'https://hyperlinker.org/te/convento/index.html',
         };
