--- a/lab/repubblica/letters/historical_echo.html
+++ b/lab/repubblica/letters/historical_echo.html
@@ -18,27 +18,12 @@ a:hover{text-decoration:underline}
 
 
 
-<strong>Call to Global Media</strong>
-
-For the kind attention of political media suffering under tyranny in their own countries.
-
-For once in your lives, try to forget the rulers and focus instead on those hired for life in what are still fake-public jobs. Without these perennial careerists, no ruler can become a dictator; no journalist will be imprisoned; no other human will suffer tyranny. Instead, they all will finally enjoy true Democracy.
-
-An exercise for the media: when you talk about 'repression,' forget the rulers and focus on the state careerists, on the bureaucrats, on the officials. And then, begin dreaming you too about—and building—a Public Jobs Bank!
-
-And now ...
-
-
-
-
-
-<strong>A Historical Echo from Italy:
-The Unresolved Transition to the Republic</strong>
+<strong>A Historical Echo from Italy: The Unresolved Transition to the Republic</strong>
 
 
 Dear Madame, Sir,
 
-With the utmost respect, I wish to present to you a serious matter, rooted in the History of my Country, Italy, which has had and continues to have negative repercussions across Europe. After thirty years of research and reflection, being certain of my conclusions, I cannot remain silent. If I did, I would make myself co-responsible for the greatest deception in History.
+With the utmost respect, I wish to present to you a serious matter, rooted in the History of my Country, Italy, which has had and continues to have negative repercussions across Europe and abroad. After thirty years of research and reflection, being certain of my conclusions, I cannot remain silent. If I did, I would make myself co-responsible for the greatest deception in History.
 
 After the proclamation of the Italian Republic, its rulers should have adapted the apparatus inherited from the monarchy to the new democratic status. Lifelong employments should have been replaced by fixed-term mandates, open to the participation of a large number of qualified citizens. Public jobs, being part of the res publica (the public good), could not remain the domain of careerists, prohibiting access to others.
 
@@ -52,7 +37,7 @@ The central point is this: the Italian People were never informed of their right
 
 I cannot go into detail here now. I simply wanted you to know that if half of the Italian voting population still goes to the polls, thereby endorsing the thesis that everything is fine and normal as it is, the other half, that abstains from voting, is not of this opinion. Among the latter, there is one person who, in addition to committing to minor goals, puts all his effort into giving Italy a historic new direction, favoring the advent of a Republic that is truly worthy of that name.
 
-For the past eighty years, a persistent monarchical organization has been masked by the label 'republic.' Now, also thanks to the ubiquitous contribution of Universal Intelligence (UI), cultural distortions and archaic privileges are set to disappear. Through the work of the undersigned—do not forgive my directness, but do you know of anyone else who, in eighty years, has claimed what is stated in this letter? Has anyone else put aside their own political desires to focus instead on building a self-sustaining structure?—it will finally be clear what Democracy truly is and its relationship with the Republic. Above all, we will understand the true purpose of these two concepts. From this point forward, 'Republic' shall be understood as a centrality based on People's co-ownership, the temporality of mandates, and diffuse participation.
+For the past eighty years, a persistent monarchical organization has been masked by the label 'republic.' Now, also thanks to the ubiquitous contribution of Universal Intelligence (UI), cultural distortions and archaic privileges are set to disappear. Through the work of the undersigned—do not forgive my directness, but do you know of anyone else who, in eighty years, has claimed what is stated in this letter? Has anyone else put aside their own political desires to focus instead on building a self-resolving structure?—it will finally be clear what Democracy truly is and its relationship with the Republic. Above all, we will understand the true purpose of these two concepts. From this point forward, 'Republic' shall be understood as a centrality based on People's co-ownership, the temporality of mandates, and diffuse participation.
 
 There will then emerge the need for an Institute, may be named the Public Jobs Bank (P.J.B.), which, thanks to the pro tempore, will allow the launch of a Harmonic Social Rotation (H.S.R.). This will make the population not only more conscious but also deeply united, as it will rest upon a solid common foundation.
 
@@ -73,7 +58,7 @@ https://REPUBLIC.hyperlinker.org
 
 There is no Republic, there is no Democracy, without the Public Jobs Bank. This awareness may be was born and is currently arising in Italy, but it is meant for Europe and the entire world. No nation, or union of nations, can face the challenges of existence without a functional and appropriate structure. Repression, tyranny, and war stem everywhere from the absence of true Republics. This is why: structure first, politics later! This is exactly what those who abstain from voting truly want. Just ask them.
 
-https://dda.hyperlinker.org - dda@hyperlinker.org - smart: +39 339 5014947 (only WSP)
+https://dda.hyperlinker.org - dda@hyperlinker.org - smart: +39 339 5014947 (only SMS)
 
 If you deem this matter worthy of attention,
 I would be grateful if you would inform me
@@ -82,10 +67,12 @@ in this regard. Thank you.
 
 
 
+
+
 </pre>
 
 <div style="text-align:center;">
-<a href="../en_index.html" target="">___ The REPUBLIC of FULFILLED MEANING ___</a>
+<strong><a href="../en_index.html" target="">___ The REPUBLIC of FULFILLED MEANING ___</a></strong>
 </div>
 
 </div>
