--- a/lab/repubblica/dir_lic.html
+++ b/lab/repubblica/dir_lic.html
@@ -7,7 +7,7 @@
 <style>
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
 .box{width:100%;max-width:60rem;text-align:left}
-h1{font-size:1.4em;margin:4rem 0 3rem 0}
+h1{font-size:1.6em;margin:4rem 0 3rem 0}
 p{font-size:1em;line-height:1.5;margin:0 0 2rem 0}
 .nav{text-align:center;font-size:1.4em;font-weight:bold;}
 a{color:#000;text-decoration:none}
@@ -38,7 +38,11 @@ Un vero avanzamento culturale e sociale negli ultimi 80 anni non è avvenuto per
 
 </p><p>
 
-Qualcosa da ridire? Allora facciamo un conto. Ottant'anni di finta "repubblica", di una centralità che altro non è che il vecchio stato monarchico spacciato per "repubblica". Interi parlamenti e senati ricolmi di tizi che tuttora non hanno idea di cosa sia davvero la Repubblica, di come essa costruisca la Democrazia. Quanti presidenti in questi 80 anni senza una Repubblica? Quanti stipendi tra tutti codesti grandi proprietari della nostra santa Res Publica? E quanti professori, quanti ricercatori, quanti esperti, quanti immensi serbatoi di pensiero, tutti a raccontarci la fine della Democrazia quando questa ancora non è potuta sorgere in alcun luogo al mondo! Quanto denaro hanno intascato tutti costoro in otto decenni, lasciando un mondo in balia di una incultura risalente ad un secolo fa e che solo per questo rimane afflitto da guerre con milioni di morti e problemi senza fine? No, non c'è prezzo per il male che hanno fatto e devono ripagare, tutti, dal primo all'ultimo. E non c'è prezzo per ricompensare proporzionalmente chi invece ha fatto chiarezza.
+Qualcosa da ridire? Allora facciamo un conto. Ottant'anni di finta "repubblica", di una centralità che altro non è che il vecchio stato monarchico spacciato per "repubblica". Interi parlamenti e senati ricolmi di tizi che tuttora non hanno idea di cosa sia davvero la Repubblica, di come essa costruisca la Democrazia. Quante auorità, eccellenze e personalità in questi 80 anni senza una Repubblica? Quanti stipendi per tutti codesti grandi proprietari della nostra santa Res Publica? E quanti professori, ricercatori, esperti, quanti immensi serbatoi di pensiero, tutti a raccontarci la fine della Democrazia quando questa ancora non è potuta sorgere in alcun luogo al mondo! Quanto denaro hanno intascato tutti costoro in otto decenni, lasciando un mondo in balia di una incultura risalente ad un secolo fa e che solo per questo rimane afflitto da guerre con milioni di morti e problemi senza fine? No, non c'è prezzo per il male che hanno fatto e devono ripagare, tutti, dal primo all'ultimo. E non c'è prezzo per ricompensare proporzionalmente chi invece ha fatto chiarezza.
+
+</p><p>
+
+Nonostante fosse compito di tutti costoro rimuovere gli ostacoli di ordine economico e sociale, che, limitando di fatto la libertà e l’eguaglianza dei cittadini, impedivano il pieno sviluppo della persona umana e l’effettiva partecipazione di tutti i lavoratori all’organizzazione politica, economica e sociale del Paese, nessuno di loro ha fatto un passo in questa direzione. Nessuno! Al contrario il Laboratorio Eudemonia da oltre trent'anni lavora e s'impegna allo scopo. Tutti loro strapagati nulla han fatto, chi qui scrive invece non s'è curato affatto che non avrebbe ricevuto alcun compenso fino a lavoro compiuto.
 
 </p><p>
 
