--- a/lab/repubblica/letters/historical_echo.html
+++ b/lab/repubblica/letters/historical_echo.html
@@ -10,11 +10,10 @@ a{color:#000;text-decoration:none}
 a:hover{text-decoration:underline}
 </style>
 </head>
-<body style="background-color: white; max-width: 70%; margin: 0 auto; font-size: 2rem; padding-bottom: 7rem;">
+<body style="background-color: white; max-width: 60%; margin: 0 auto; font-size: 2rem; padding-bottom: 7rem;">
 <div style="text-align:center;">
 
-<pre style="text-align:left;font-size:28px;">
-
+<pre style="text-align:left;font-family:bitstream;font-size:28px;">
 
 
 
@@ -25,25 +24,25 @@ Dear Madame, Sir,
 
 With the utmost respect, I wish to present to you a serious matter, rooted in the History of my Country, Italy, which has had and continues to have negative repercussions across Europe and abroad. After thirty years of research and reflection, being certain of my conclusions, I cannot remain silent. If I did, I would make myself co-responsible for the greatest deception in History.
 
-After the proclamation of the Italian Republic, its rulers should have adapted the apparatus inherited from the monarchy to the new democratic status. Lifelong employments should have been replaced by fixed-term mandates, open to the participation of a large number of qualified citizens. Public jobs, being part of the res publica (the public good), could not remain the domain of careerists, prohibiting access to others.
+After the proclamation of the Italian Republic, its rulers should have adapted the apparatus inherited from the monarchy to the new democratic status. Lifelong employments should have been replaced by fixed-term mandates, open to the participation of a large number of qualified citizens. Public jobs, being part of the res publica, primary common good, could not remain the perennial domain of careerists, prohibiting access to others.
 
-The principle was clear: the figure of the monarch, the perpetual holder of power, should have been replaced by the figure of the citizen-democrat, who is entrusted with the public role temporarily and who, at the end of their mandate, returns it to the Sovereign People. In this way, the role retains its nature as a common good without becoming a personal privilege. However, the politicians' desire to be continuously re-elected prevented the advent of a true Republic.
+The principle was clear: the figure of the monarch, the perpetual holder of power, should have been replaced by the figure of the citizen-democrat, who is entrusted with the public role temporarily and who, at the end of their mandate, returns it to the Sovereign People. In this way, the role retains its nature as a common resource without becoming a personal privilege. However, the politicians' desire to be continuously re-elected prevented the advent of a true Republic.
 
-A tacit pact between politicians and bureaucrats to remain owners of the res publica (launched with the system of vote exchange: you vote for me and I give you the stable position, so you have nothing to say about my conduct) maintained the monarchical model everywhere. This is not a minor matter. To guarantee the system the various capacities and perceptions necessary for the proper functioning of things, it is essential that centrality be accessible to the largest possible number of people.
+A tacit pact between politicians and bureaucrats to remain owners of the res publica (launched with the system of vote exchange: you vote for me and I give you the stable position, so you have nothing to say about my conduct) maintained the monarchical model everywhere. This is not a minor matter. To guarantee the system the various capacities and perceptions necessary for the proper functioning of things, it is essential that the public structures be accessible to the largest possible number of skilled people.
 
 The consequences of this failure are tangible. A system blocked at all levels, impermeable to renewal and, therefore, incapable of guaranteeing functionality and justice, still persists today. Its political alternation from one wing to the other of the Assembly does not refine thought but generates abuses and excesses. To give an example, among countless other aberrations, please inquire through one of your Italian colleagues about the D.P.R. 380/2001: it punishes the victims instead of those responsible. This is the logic of an arrogant tyrannical order, not a proactive democratic process.
 
-The central point is this: the Italian People were never informed of their rights over that sacred common good which is the res publica. No one has ever explained that public jobs, powers, and incomes belong to the People and that their lifelong cession is equivalent to a definitive loss for the contemporary collective. Without this information, every public mandate of indefinite duration should be considered void. And to have the support of logic and reason — if not also of the Law — is an extraordinary blessing for the righteous. For in truth, it is not so much who governs that matters, but the structure that surrounds them. Whether that structure is closed (tyrannical) or open (democratic) makes all the difference. This is the cultural and political breakthrough that, had it been achieved, would have prevented the current global state of affairs.
+The central point is this: the Italian People were never informed of their rights over that sacred common good which is the res publica. No one has ever explained that public jobs, powers, and incomes belong to the People and that their lifelong cession is equivalent to a definitive loss for the contemporary collective. Without this information, every public mandate of indefinite duration should be considered void. And to have the support of logic and reason — if not also of the Law — is an extraordinary blessing for the righteous. For in truth, it is not so much who governs that matters, but the framework that surrounds them. Whether that structure is closed (tyrannical) or open (democratic) makes all the difference. This is the cultural and political breakthrough that, had it been achieved, would have prevented the current global state of affairs.
 
 I cannot go into detail here now. I simply wanted you to know that if half of the Italian voting population still goes to the polls, thereby endorsing the thesis that everything is fine and normal as it is, the other half, that abstains from voting, is not of this opinion. Among the latter, there is one person who, in addition to committing to minor goals, puts all his effort into giving Italy a historic new direction, favoring the advent of a Republic that is truly worthy of that name.
 
-For the past eighty years, a persistent monarchical organization has been masked by the label 'republic.' Now, also thanks to the ubiquitous contribution of Universal Intelligence (UI), cultural distortions and archaic privileges are set to disappear. Through the work of the undersigned—do not forgive my directness, but do you know of anyone else who, in eighty years, has claimed what is stated in this letter? Has anyone else put aside their own political desires to focus instead on building a self-resolving structure?—it will finally be clear what Democracy truly is and its relationship with the Republic. Above all, we will understand the true purpose of these two concepts. From this point forward, 'Republic' shall be understood as a centrality based on People's co-ownership, the temporality of mandates, and diffuse participation.
+For the past eighty years, a persistent monarchical organization has been masked by the label 'republic.' Now, also thanks to the ubiquitous contribution of Universal Intelligence (UI), cultural distortions and archaic privileges are set to disappear. Through the work of the undersigned—do not forgive my directness, but do you know of anyone else who, in eight decades, has claimed what is stated in this letter? Has anyone else put aside their own political desires to focus instead on building a self-resolving organization?—it will finally be clear what Democracy truly is and its relationship with the Republic. Above all, we will understand the true purpose of these two concepts. From this point forward, 'Republic' shall be understood as a centrality based on People's co-ownership, the temporality of mandates, and diffuse participation.
 
 There will then emerge the need for an Institute, may be named the Public Jobs Bank (P.J.B.), which, thanks to the pro tempore, will allow the launch of a Harmonic Social Rotation (H.S.R.). This will make the population not only more conscious but also deeply united, as it will rest upon a solid common foundation.
 
-Madame, Sir, I can only thank you for the time you conceived me. I feel it is my duty to inform you of the new awareness arising in my Country. As a terrestrial citizen, I cannot limit my actions to Italian soil or in Europe, especially as this paradigm shift has the potential to reshape global geopolitics in unexpected ways. For some time, I have been sharing this vision with rational minds across the globe, and I could not exclude you. My goal is to ensure you are not caught unprepared by the immense progress achievable through the simple application of an everywhere existing Law: specifically, the principle of co-ownership, which prohibits the perpetual enjoyment by a few to the detriment of others. The Res Publica first.
+Madame, Sir, I can only thank you for the time you conceived me. I feel it is my duty to inform you of the new awareness arising in my Country. As a terrestrial citizen, I cannot limit my actions to Italian soil or in Europe, especially as this paradigm shift has the potential to reshape global geopolitics in unexpected ways. For some time, I have been sharing this vision with rational minds across the globe, and I could not exclude you. My goal is to ensure you are not caught unprepared by the immense progress achievable through the simple application of an everywhere existing Law: specifically, the principle of co-ownership, which prohibits the perpetual enjoyment of any good by a few to the detriment of others. The Res Publica first.
 
-I take my leave with a phrase that will soon be heard repeated everywhere by politicians in Italy and Europe: "We were all captured as children and indoctrinated by lifelong employees in jobs whose nature was never made public! How were we to imagine it? How could we have known?"
+I take my leave with a phrase that will soon be heard repeated everywhere by many in Italy and Europe: "We were all captured as children and indoctrinated by lifelong employees in jobs whose nature was never made public! How were we to imagine it? How could we have known?"
 
 With my respectful regards,
 
@@ -64,8 +63,6 @@ If you deem this matter worthy of attention,
 I would be grateful if you would inform me
 of any initiatives you might take
 in this regard. Thank you.
-
-
 
 
 
