--- a/lab/repubblica/index_1.html
+++ b/lab/repubblica/index_1.html
@@ -10,6 +10,7 @@ body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:c
 h1{font-size:2.2em;margin:6rem 0 2rem 0}
 p{font-size:1em;line-height:1.5;margin:0 0 3rem 0}
 .nav{text-align:center;font-size:1.4em}
+.nav_1{text-align:center;font-size:0.8em}
 a{color:#000;text-decoration:none}
 a:hover{text-decoration:underline}
 .index{text-align:center;font-size:1.4em;margin-top:7rem;margin-bottom:5rem;display:block;}
@@ -70,15 +71,17 @@ a:hover{text-decoration:underline}
 
 <a href="dna.html">...</a>
 
-</p><p>
+</p>
 
-<a href="dna.html">...</a>
+<div class="nav_1">
 
-</p><p>
+<p>
 
-...
+Letters: <a href="letters/call_for_media.html">Call for media</a> / <a href="letters/historical_echo.html">Historical Echo</a> / 
 
-</p><p>
+</p>
+
+</div>
 
 </div>
 
