--- a/lab/repubblica/fr_3.html
+++ b/lab/repubblica/fr_3.html
@@ -19,7 +19,7 @@ a:hover{text-decoration:underline}
 
 <div class="box">
 
-  <p>En résumé : on vit en Démocratie si le Peuple jouit d'une République. S'il existe une Banque des Emplois Publics (où chacun peut s'inscrire et s'inscrire sur liste pour apporter sa contribution) qui permet le renouvellement périodique et régulier du personnel gérant la chose publique. Si cet Institut n'est pas en vigueur, tant la « démocratie » que la « république », bien que déclarées, bien que brandies, sont fictives. Il s'agit de formes maintenues confuses, intermédiaires, faux, par ceux qui, jouissant de privilèges indus, ne veulent pas y renoncer et utilisent tous les organismes en leur possession, notamment éducatifs et informationnels, pour maintenir le Peuple inconscient et en état de sujétion.</p>
+  <p>En résumé : on vit en Démocratie si le Peuple jouit d'une République. S'il existe une Banque des Emplois Publics (où chacun peut s'inscrire sur liste pour apporter sa contribution) qui permet le renouvellement périodique et régulier du personnel gérant la chose publique. Si cet Institut n'est pas en vigueur, tant la « démocratie » que la « république », bien que déclarées, bien que brandies, sont fictives. Il s'agit de formes maintenues confuses, intermédiaires, faux, par ceux qui, jouissant de privilèges indus, ne veulent pas y renoncer et utilisent tous les organismes en leur possession, notamment éducatifs et informationnels, pour maintenir le Peuple inconscient et en état de sujétion.</p>
   
   <p>Et maintenant, approfondissons, poursuivons ...</p>
 
