--- a/lab/repubblica/index_1.html
+++ b/lab/repubblica/index_1.html
@@ -77,7 +77,7 @@ a:hover{text-decoration:underline}
 
 <p>
 
-Letters: <a href="letters/call_for_media.html">Call for media</a> / <a href="letters/historical_echo.html">Historical Echo</a> / 
+Letters: <a href="letters/historical_echo.html">Historical Echo</a> / <a href="letters/echo_historique.html">Echo Historique</a> / <a href="letters/call_for_media.html">Call for media</a> / 
 
 </p>
 
