--- a/lab/repubblica/index_1.html
+++ b/lab/repubblica/index_1.html
@@ -10,7 +10,7 @@ body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:c
 h1{font-size:2.2em;margin:6rem 0 2rem 0}
 p{font-size:1em;line-height:1.5;margin:0 0 3rem 0}
 .nav{text-align:center;font-size:1.4em}
-.nav_1{text-align:center;font-size:0.8em}
+.nav_1{text-align:center;font-size:0.7em}
 a{color:#000;text-decoration:none}
 a:hover{text-decoration:underline}
 .index{text-align:center;font-size:1.4em;margin-top:7rem;margin-bottom:5rem;display:block;}
@@ -57,6 +57,30 @@ a:hover{text-decoration:underline}
 
 </p><p>
 
+<a href="nonfarmai.html">Osmosi, altro che trasparenza!</a>
+
+</p><p>
+
+<a href="astensionismo.html">Astensionismo: segnale di buon senso ed onestà</a>
+
+</p><p>
+
+<a href="dna.html">...</a>
+
+</p><p>
+
+<a href="dna.html">...</a>
+
+</p><p>
+
+<a href="dna.html">...</a>
+
+</p><p>
+
+<a href="dna.html">...</a>
+
+</p><p>
+
 <a href="dna.html">...</a>
 
 </p><p>
@@ -77,7 +101,7 @@ a:hover{text-decoration:underline}
 
 <p>
 
-Letters: <a href="letters/historical_echo.html">Historical Echo</a> / <a href="letters/echo_historique.html">Echo Historique</a> / <a href="letters/call_for_media.html">Call for media</a> / 
+Letters: <a href="letters/historical_echo_0.html">Historical</a> <a href="letters/historical_echo_1.html">Echo</a> / <a href="letters/echo_historique_0.html">Echo</a> <a href="letters/echo_historique_1.html">Historique</a> / <a href="letters/call_for_media.html">Call for media</a> / 
 
 </p>
 
