--- a/lab/repubblica/letters/call_for_media.html
+++ b/lab/repubblica/letters/call_for_media.html
@@ -13,7 +13,7 @@ a:hover{text-decoration:underline}
 <body style="background-color: white; max-width: 70%; margin: 0 auto; font-size: 2rem; padding-bottom: 7rem;">
 <div style="text-align:center;">
 
-<pre style="text-align:left;font-size:28px;">
+<pre style="text-align:left;font-family:bitstream;font-size:28px;">
 
 
 
