--- a/lab/repubblica/index_1.html
+++ b/lab/repubblica/index_1.html
@@ -57,7 +57,7 @@ a:hover{text-decoration:underline}
 
 </p><p>
 
-<a href="nonfarmai.html">Osmosi, altro che trasparenza!</a>
+<a href="osmosi.html">Osmosi, altro che trasparenza!</a>
 
 </p><p>
 
