--- a/lab/repubblica/index_1.html
+++ b/lab/repubblica/index_1.html
@@ -21,7 +21,7 @@ a:hover{text-decoration:underline}
 
 <div class="box">
 
-<h1>La REPUBBLICA di SENSO COMPIUTO</h1>
+<h1><a href="index.html">La REPUBBLICA di SENSO COMPIUTO</a></h1>
 
 <br><br>
 
@@ -49,6 +49,14 @@ a:hover{text-decoration:underline}
 
 </p><p>
 
+<!--
+
+<a href="illegalitas.html">Una seria questione d'illegittimità</a>
+
+</p><p>
+
+-->
+
 <a href="dna.html">Cambiamo DNA alle nostre società</a>
 
 </p><p>
@@ -65,11 +73,11 @@ a:hover{text-decoration:underline}
 
 </p><p>
 
-<a href="dna.html">...</a>
+<a href="progetto.html">Programmi per polli od un progetto per umani?</a>
 
 </p><p>
 
-<a href="dna.html">...</a>
+<a href="bdpi.html">Che cos'è la Banca dei Pubblici Impieghi?</a>
 
 </p><p>
 
