--- a/lab/repubblica/letters/call_for_media.html
+++ b/lab/repubblica/letters/call_for_media.html
@@ -29,7 +29,7 @@ And now ...
 
 <pre style="text-align:center;">
 
-<strong><a href="historical_echo.html" target="">A Historical Echo from Italy:
+<strong><a href="historical_echo_1.html" target="">A Historical Echo from Italy:
 The Unresolved Transition to the Republic</a></strong>
 
 </pre>
