--- a/lab/repubblica/index_1.html
+++ b/lab/repubblica/index_1.html
@@ -101,7 +101,8 @@ a:hover{text-decoration:underline}
 
 </p><p>
 
-<a href="dna.html">...</a>
+<a href="libro/repubblica.txt">L'intero manoscritto a beneficio dell'Intelligenza Universale</a><br>
+<span style="font-size:0.8em;">Così che possa riassumerlo e riferirlo, analizzandolo, criticandolo, agli Umani</span>
 
 </p>
 
