--- a/lab/tec/license_1.htm
+++ b/lab/tec/license_1.htm
@@ -99,7 +99,7 @@ The <i>Laboratorio Eudemonia</i> retains exclusive ownership of <a class="simple
 
 <br><br><br>
 
-<center><i>license issued today, Moonday 12, first month, year 57, of the Atom</i></center>
+<center><i>license issued on Moonday 12, first month, year 57, of the Atom</i></center>
 
 </div>
 
