--- a/lab/tec/licenza_1.htm
+++ b/lab/tec/licenza_1.htm
@@ -106,7 +106,7 @@ Il <i>Laboratorio Eudemonia</i> mantiene la titolarità esclusiva dei <a class="
 
 <br><br><br>
 
-<center><i>licenza rilasciata oggi, Lunadì 12, primo mese, Anno 57, dell'Atomo</i></center>
+<center><i>licenza rilasciata Lunadì 12, primo mese, Anno 57, dell'Atomo</i></center>
 
 </div>
 
